formatações de layout

--- a/css/peguemonte.css
+++ b/css/peguemonte.css
@@ -1,18 +1,19 @@
 *{
     text-decoration: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #f7d17e56;
+    background-image: linear-gradient(to bottom, #f7d17e56, #f7d17e56,#D4A12C);
     margin: 0px;
 }
 
 header {
     margin: auto;
     min-width: 400px;
-    max-width: 800px;
-    background-image: linear-gradient(-45deg, #F5CC14, #F7DA5E);
-    border-radius: 10px;
+    background-image: linear-gradient(to bottom, #d4a12c, #F7DA5E);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
 }
 
@@ -22,6 +23,13 @@ header > h1 {
     color: #D4A12C;
     text-align: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
+}
+
+header > h1:hover {
+    width: 400px;
+    margin: auto;
+    background-color:#F7DA5E;
+    border-radius: 4px;
 }
 
 header > h2 {
@@ -37,19 +45,24 @@ header > h2 {
 }
 
 nav {
-    padding: 5px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #D4A12C;
     display: flex;
+    padding: 5px;
     justify-content: space-evenly;
+    align-items: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
-
 }
 
 nav > a {
     color: #FFF;
     text-decoration: none;
     font-weight: bold;
+}
+
+nav > a:hover {
+    background-color:#F7DA5E;
+    padding: px;
+    border-radius: 4px;
 }
 
 main {
@@ -99,7 +112,6 @@ footer {
     margin: auto;
     border-radius: 0px 0px 5px 5px;
     min-width: 400px;
-    max-width: 800px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #D4A12C;
     color: #fff ;
