--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,16 +8,15 @@
 }
 
 body {
-    background-color: #f7d17e56;
+    /*background-color: #f7d17e56;*/
+    background-image: linear-gradient(to bottom, #f7d17e56, #f7d17e56,#D4A12C);
     margin: 0px;
 }
 
 header {
     margin: auto;
     min-width: 400px;
-    max-width: 800px;
-    background-image: linear-gradient(-45deg, #F5CC14, #F7DA5E);
-    border-radius: 10px;
+    background-image: linear-gradient(to bottom, #d4a12c, #F7DA5E);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
 }
 
@@ -35,11 +34,13 @@ header > h1 {
 }
 
 nav {
-    padding: 5px;
+    height: 50px;
+    padding: 2px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #D4A12C;
+    /*background-color: #D4A12C;*/
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
 
 }
@@ -48,6 +49,12 @@ nav > a {
     color: #FFF;
     text-decoration: none;
     font-weight: bold;
+}
+
+nav > a:hover {
+    background-color:#F7DA5E;
+    padding: 5px;
+    border-radius: 4px;
 }
 
 main {
@@ -104,7 +111,6 @@ footer {
     margin: auto;
     border-radius: 0px 0px 5px 5px;
     min-width: 400px;
-    max-width: 800px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #D4A12C;
     color: #fff ;
