--- a/css/contato.css
+++ b/css/contato.css
@@ -51,6 +51,7 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
+    margin-bottom: 100px;
 }
 
 nav > a {
@@ -68,7 +69,7 @@ nav > a:hover {
 main {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:flex-start;
     margin: auto;
     height: 800px;
     padding: 20px;
