--- a/css/contato.css
+++ b/css/contato.css
@@ -51,7 +51,7 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 nav > a {
@@ -79,6 +79,7 @@ main {
 
 .contato-item{
     padding: 5px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
 }
 
 .contato {
