--- a/css/contato.css
+++ b/css/contato.css
@@ -77,18 +77,28 @@ main {
     max-width: 800px;
 }
 
-.contato-item{
-    padding: 5px;
+.contato-item > a {
+    color: black;
+    padding: 10px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.466);
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 
 .contato {
     background-image: linear-gradient(to bottom, #d4a12c, #F7DA5E);
-    padding: 20px;
+    padding: 30px;
     height: 300px;
     width: 500px;
     border-radius: 8px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.082);
+    display: flex;
+    flex-direction: column;
+}
+
+.contato-item > a:hover {
+    text-decoration: underline;
 }
 
 footer {
